--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: "\U0001F680 New feature proposal"
+name: "\U0001F680 New feature proposal/Suggestion"
 description: Propose a new feature
 labels: ["Status: Proposal"]
 body:
