--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -20,6 +20,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Change directory
-      run: cd assignments/week1/
+      run: cd ./assignments/week1
     - name: Testing
       run: mvn test
