--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -19,7 +19,5 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Change directory
-      run: cd ./assignments/week1
     - name: Testing
-      run: mvn test
+      run: mvn test -f ./assignments/week1/
