--- a/.github/workflows/run_scan.yml
+++ b/.github/workflows/run_scan.yml
@@ -25,5 +25,8 @@ jobs:
         cache: maven
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v1.6
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         projectBaseDir: ./assignments/week1/
